--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,21 @@
-/* You can add global styles to this file, and also import other style files */
+*{
+    margin:0;
+    padding:0;
+}
+div{
+    box-sizing: border-box;
+}
+.btn-blue{
+    background-color: #48a5ef;
+}
+.btn-red{
+    background-color:red;
+}
+
+.dflex{
+    display: flex;
+    justify-content: space-between;
+}
+.hiden{
+    opacity: 0;
+}
